--- a/package.json
+++ b/package.json
@@ -2,5 +2,15 @@
   "dependencies": {
     "chalk": "^5.3.0",
     "discord.js": "^14.14.1"
-  }
+  },
+  "name": "simple-multipurpose-bot",
+  "version": "1.0.0",
+  "main": "src/index",
+  "devDependencies": {},
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "author": "Vanika",
+  "license": "ISC",
+  "description": ""
 }
