--- a/package.json
+++ b/package.json
@@ -1,16 +1,18 @@
 {
   "dependencies": {
-    "chalk": "^5.3.0",
-    "discord.js": "^14.14.1"
+    "chalk": "^4.0.0",
+    "discord.js": "^14.14.1",
+    "moment": "^2.30.1",
+    "mongoose": "^8.0.4"
   },
   "name": "simple-multipurpose-bot",
   "version": "1.0.0",
   "main": "src/index",
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "Vanika",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "type": "commonjs"
 }
