--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "chalk": "^4.0.0",
     "discord.js": "^14.14.1",
+    "dotenv": "^16.3.1",
     "moment": "^2.30.1",
     "mongoose": "^8.0.4"
   },
